templates/jat introduction_detail, repository_detail :D

--- a/jat/templates/jat/introduction_detail.html
+++ b/jat/templates/jat/introduction_detail.html
@@ -3,10 +3,10 @@
 {% block title %}Detail Introduction{% endblock %}
 
 {% block content %}
-    {{ repository.name }}
+    {{ introduction.contents }}
     <table border="1">
         <tbody>
-        {% for comment in introduction.contents_set.all %}
+        {% for comment in introduction.comment_set.all %}
             <tr>
                 <td>{{ comment.comment }}</td>
                 <td>수정</td>
