--- a/jat/templates/jat/repository_create.html
+++ b/jat/templates/jat/repository_create.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
-
-{% block title %}Add Bookmark{% endblock %}
-
+{% block title %}Add Repository{% endblock %}
 
 {% block content %}
     <form action="" method="post">
@@ -11,18 +9,3 @@
         <button type="submit">Add</button>
     </form>
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
