--- a/jat/templates/jat/introduction_confirm_delete.html
+++ b/jat/templates/jat/introduction_confirm_delete.html
@@ -1,11 +1,12 @@
+  
 {% extends 'base.html' %}
 
-{% block title %}Confirm Delete Repository{% endblock %}
+{% block title %}Confirm Delete Introduction{% endblock %}
 
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
-        Do you want to delete Repository "{{ repository }}"?
+        Do you want to delete Introduction "{{ introduction }}"?
         <button type="submit">Delete</button>
         <button type="button" onclick="history.back();">Cancel</button>
     </form>
