--- a/jat/templates/jat/introduction_create.html
+++ b/jat/templates/jat/introduction_create.html
@@ -1,12 +1,11 @@
-  
 {% extends 'base.html' %}
 
-{% block title %}Update Repository{% endblock %}
+{% block title %}Add Introduction{% endblock %}
 
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
-        {{ form.as_ul }}
-        <button type="submit">Update</button>
+        {{ form.as_p }}
+        <button type="submit">Add</button>
     </form>
 {% endblock %}
