--- a/jat/templates/jat/introduction_update.html
+++ b/jat/templates/jat/introduction_update.html
@@ -1,7 +1,7 @@
   
 {% extends 'base.html' %}
 
-{% block title %}Update Repository{% endblock %}
+{% block title %}Update Introduction{% endblock %}
 
 {% block content %}
     <form action="" method="post">
