--- a/jat/templates/jat/comment_update.html
+++ b/jat/templates/jat/comment_update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Update Repository{% endblock %}
+{% block title %}Update Comment{% endblock %}
 
 {% block content %}
     <form action="" method="post">
