--- a/jat/templates/jat/introduction_create.html
+++ b/jat/templates/jat/introduction_create.html
@@ -8,4 +8,11 @@
         {{ form.as_p }}
         <button type="submit">Add</button>
     </form>
+    <table>
+
+        <tr>
+            <td></td>
+        </tr>
+
+    </table>
 {% endblock %}
