IntroductionCreateView -> add_introduction() CBC -> FBV :D

--- a/jat/templates/jat/introduction_create.html
+++ b/jat/templates/jat/introduction_create.html
@@ -8,11 +8,9 @@
         {{ form.as_p }}
         <button type="submit">Add</button>
     </form>
-    <table>
-
-        <tr>
-            <td></td>
-        </tr>
-
-    </table>
+    <ul>
+        {% for introduction in repository.introduction_set.all %}
+            <li>version {{ introduction.version }}</li>
+        {% endfor %}
+    </ul>
 {% endblock %}
