--- a/jat/templates/jat/comment_confirm_delete.html
+++ b/jat/templates/jat/comment_confirm_delete.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Confirm Delete Comment{% endblock %}
+{% block title %}Delete Comment{% endblock %}
 
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
-        Do you want to delete Comment "{{ comment }}"?
+        Do you want to delete Comment {{ comment }}?
         <button type="submit">Delete</button>
         <button type="button" onclick="history.back();">Cancel</button>
     </form>
