--- a/jat/templates/jat/introduction_detail.html
+++ b/jat/templates/jat/introduction_detail.html
@@ -1,19 +1,18 @@
-
 {% extends 'base.html' %}
 
 {% block title %}Detail Introduction{% endblock %}
 
 {% block content %}
     {{ introduction.contents }}
-    <a href="{% url 'jat:comment_add' repository_pk=introduction.repository_id introduction_pk=introduction.pk %}">Add Comment</a>
+    <a href="{% url 'jat:comment_add' repository_pk=introduction.repository.pk introduction_pk=introduction.pk %}">Add Comment</a>
     <table class="table">
         <tbody>
         {% for comment in introduction.comment_set.all %}
-            <tr>
-                <td>{{ comment.comment }}</td>
-                <td><a href="{% url 'jat:comment_modify' repository_pk=introduction.repository_id introduction_pk=introduction.pk pk=comment.pk %}" class="btn btn-success">수정</a></td>
-                <td><a href="{% url 'jat:comment_delete' repository_pk=introduction.repository_id introduction_pk=introduction.pk pk=comment.pk %}" class="btn btn-danger">삭제</a></td>
-            </tr>
+        <tr>
+            <td>{{ comment.comment }}</td>
+            <td><a href="{% url 'jat:comment_modify' repository_pk=introduction.repository.pk introduction_pk=introduction.pk pk=comment.pk  %}" class="btn btn-success">수정</a></td>
+            <td><a href="{% url 'jat:comment_delete' repository_pk=introduction.repository.pk introduction_pk=introduction.pk pk=comment.pk  %}" class="btn btn-danger">삭제</a></td>
+        </tr>
         {% endfor %}
         </tbody>
     </table>
