--- a/jat/templates/jat/repository_confirm_delete.html
+++ b/jat/templates/jat/repository_confirm_delete.html
@@ -1,12 +1,11 @@
-
 {% extends 'base.html' %}
 
-{% block title %}Confirm Delete Repository{% endblock %}
+{% block title %}Update Repository{% endblock %}
 
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
-        Do you want to delete Repository "{{ repository }}"?
+        Do you want to delete Repository {{ repository }}?
         <button type="submit">Delete</button>
         <button type="button" onclick="history.back();">Cancel</button>
     </form>
