--- a/jat/templates/jat/repository_list.html
+++ b/jat/templates/jat/repository_list.html
@@ -9,14 +9,13 @@
     <table class="table w-50">
         <tbody>
         {% for repository in repository_list %}
-            <tr>
-                <td class="align-middle"><a href="{% url 'jat:repository_modify' pk=repository.pk %}"><i class="bi bi-pencil-fill"></i></a></td>
-                <td>
-                    <a href="{% url 'jat:repository_detail' pk=repository.pk %}">{{ repository.name }}<br>
-                    Date: {{ repository.deadline|date:'Y/m/d h:i' }}</a>
-                </td>
-                <td class="align-middle"><a href="{% url 'jat:repository_delete' pk=repository.pk %}"><i class="bi bi-trash"></i></a></td>
-            </tr>
+        <tr>
+            <td class="align-middle"><a href="{% url 'jat:repository_modify' pk=repository.pk %}"><i class="bi bi-pencil-fill"></i></a></td>
+            <td class="align-middle"><a href="{% url 'jat:repository_detail' pk=repository.pk %}">{{ repository.name }}<br>
+            Date: {{ repository.deadline|date:'Y/m/d h:i' }}</a>
+            </td>
+            <td class="align-middle"><a href="{% url 'jat:repository_delete' pk=repository.pk %}"><i class="bi bi-trash"></i></a></td>
+        </tr>
         {% endfor %}
         </tbody>
     </table>
